WIP css parser core

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["src", "types"],
   "compilerOptions": {
+    "incremental": true,
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "node",
