--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@web/test-runner": "0.11.7",
     "babel-loader": "^8.2.2",
     "chai": "4.2.0",
+    "csstype": "^3.0.6",
     "prettier": "2.2.1",
     "snowpack": "2.18.5",
     "typescript": "4.1.3"
